Fixed last issue, revised error handling adding http-errors, revised validation strategy by adding express-validator capabilities, added new routes for admin - effortful update...lots of learnings
